test/sema/generic-type-init-non-existing-member.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

class A<T> {
    // CHECK: 5:19: error: no member named 'd' in 'A<int>'
    init() { this.d = 3 }
}

func main() { var a = A<int>() }
